Mon Jun  2 17:17:20 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/publisher/run_test.pl:
        * java/tests/messenger/run_test.pl:
        * java/tests/messenger/subscriber/TestSubscriber.java:
        * java/tests/messenger/subscriber/run_test.pl:
        * tests/DCPS/Messenger/Args.h:
        * tests/DCPS/Messenger/Writer.cpp:
        * tests/DCPS/Messenger/publisher.cpp:
        * tests/DCPS/Messenger/stack_subscriber.cpp:
        * tests/DCPS/Messenger/subscriber.cpp:

          Wait for acks if appropriate, use reliable QOS if reliable
          transport.

Mon Jun  2 14:31:31 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Added locking around pkt_chain_ access in TransportSendStrategy
          stop() to stop the access violation seen during shutdown.

Sun Jun  1 23:56:21 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/InfoRepo/FederatorConfig.inl:
        * dds/InfoRepo/FederatorManagerImpl.inl:
        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Fuzz

Fri May 30 20:39:48 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Set reliability QOS, wait for acks.

        * tests/DCPS/ManyToMany:

          svn:ignore

Fri May 30 17:56:32 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepoServ.cpp:

          Changed to use a method to definitely identify it the
          FederationId was defaulted.

        * dds/InfoRepo/FederatorConfig.h:
        * dds/InfoRepo/FederatorConfig.inl:
        * dds/InfoRepo/FederatorConfig.cpp:
        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl.inl: